--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<iframe width="1" height="1" src="https://instagram.com" title="Instagram"></iframe>
+<!DOCTYPE html>
+<html>
 
 <head>
-  ...
+  <title>Test</title>
   <meta name="google-signin-client_id" content="your-client-id-goes-here">
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://apis.google.com/js/platform.js" async defer>
+</script>
 </head>
 <body>
   <h1>Welcome to the Demo</h1>
+  <h1>Welcome to the Demo</h1>
   <div class="g-signin2"></div>
 </body>
+</html>
